Fix login issue